--- a/templates/settings.html
+++ b/templates/settings.html
@@ -6,6 +6,8 @@
 
 {% block content %}
 <a href="/terms" class="button">Terms</a>
+<a href="/import_form" class="button">Import Termstar Dictionary</a>
+<a href="/database_management" class="button">Database management</a>
 
 <h2>Column Visibility Settings</h2>
 <form id="settingsForm">
